<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintmain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CuestionarioActivity">

    <ImageView
        android:id="@+id/tvPrincipal"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/DescriptionImageArrow"
        android:layout_marginTop="60dp"
        android:src="@drawable/flecha"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Formulario"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="@id/tvPrincipal"
        app:layout_constraintBottom_toBottomOf="@id/tvPrincipal"
        app:layout_constraintStart_toEndOf="@id/tvPrincipal"
        android:text="@string/formulario"
        android:layout_marginStart="75dp"/>

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/descripcionImagen"
        app:srcCompat="@drawable/hoja"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        />

    <LinearLayout
        android:id="@+id/linealInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/formulario"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:hint="@string/hint_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@color/lightGreen"
                android:inputType="textPersonName">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSerie"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:hint="@string/hint_serie">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eSerie"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@color/lightGreen"
                android:inputType="textPersonName">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilURL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="100dp"

            android:hint="@string/hint_url">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eURL"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linealButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linealInfo">

        <Button
            android:id="@+id/buttonComentar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/formulario_button_add" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>